# ar-kan-timeseries

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  performance.md
.github/workflows/: auto-pyproject-update.yml  auto-upgrade-pyproject.yml  ci-precommit.yml
examples/: demo_rdatasets.py  demo_synthetic.py
src/arkan_ts/: __init__.py  __main__.py  basis.py  datasets.py  grid_search.py  kan.py  memory.py  model.py  train.py
